--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,10 @@
         }
       });
   </script>
+  {% if page.dates %}
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="assets/js/dates.js"></script>
+  {% endif %}
 
   <!-- Google Analytics -->
   {% include google-analytics.html %}
