--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,8 @@
   {% if page.dates %}
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="assets/js/dates.js"></script>
+  <script src="assets/js/moment.js"></script>
+  <script src="assets/js/moment-timezone-with-data-10-year-range.min.js"></script>
   {% endif %}
 
   <!-- Google Analytics -->
